[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Play" type="Button" parent="CanvasLayer"]
margin_left = 400.0
margin_top = 100.0
margin_right = 620.851
margin_bottom = 159.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="High Scores" type="Button" parent="CanvasLayer"]
margin_left = 400.0
margin_top = 250.0
margin_right = 623.783
margin_bottom = 309.0
custom_fonts/font = SubResource( 2 )
text = "High scores"

[node name="Exit" type="Button" parent="CanvasLayer"]
margin_left = 400.0
margin_top = 400.0
margin_right = 628.567
margin_bottom = 459.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/High Scores" to="." method="_on_High_Scores_pressed"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_Exit_pressed"]
